--- a/main.css
+++ b/main.css
@@ -2495,7 +2495,7 @@
 		-webkit-justify-content: space-between;
 		-ms-justify-content: space-between;
 		justify-content: space-between;
-		background: #a19f9f;
+		background: #1167b1;
 		color: #d1f1e9;
 		height: 100%;
 		overflow-y: auto;
