--- a/main.css
+++ b/main.css
@@ -2430,7 +2430,11 @@
 			vertical-align: middle;
 			width: 48%;
 		}
+		.features article .iframe {
 
+			padding-right: 2.5em;
+			width: 55%;
+		}
 			.features article .image img {
 				display: block;
 				width: 100%;
@@ -2440,6 +2444,7 @@
 			display: inline-block;
 			vertical-align: middle;
 			width: 50%;
+			padding-left: 2.5em;
 		}
 
 			.features article .inner > :last-child {
@@ -2625,7 +2630,7 @@
 	}
 
 		#main > section > .container {
-			padding: 6em 0 4em 0;
+			padding: 4em 0 4em 0;
 		}
 
 		#main > section:first-child {
